--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Ogyrec Community</title>
+    <title>ogyrec community</title>
     <link rel="icon" href="ogyreccommunity_avatar.ico">
   </head>
 </html>
