--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
     <title>ogyrec community</title>
     <link rel="icon" href="ogyreccommunity_avatar.ico">
   </head>
+
+  <body>
+    <img src="ogyreccommunity_banner.gif" alt="Баннер ogyrec community">
+  </body>
 </html>
