--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>ogyrec community</title>
-    <link rel="icon" href="ogyreccommunity_avatar.ico">
+    <center><link rel="icon" href="ogyreccommunity_avatar.ico"></center>
   </head>
 
   <body>
