--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>ogyrec community</title>
-    <center><link rel="icon" href="ogyreccommunity_avatar.ico"></center>
+    <link rel="icon" href="ogyreccommunity_avatar.ico">
   </head>
 
   <body>
-    <img src="ogyreccommunity_banner.gif" alt="Баннер ogyrec community">
+    <center><img src="ogyreccommunity_banner.gif" alt="Баннер ogyrec community"></center>
   </body>
 </html>
