--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   </head>
 
   <body>
-    <center><img src="ogyreccommunity_banner.gif" alt="Баннер ogyrec community"></center>
-    
+    <a href="#" class="btn">Зайти На Сервер</a>
   </body>
 </html>
