--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <link rel="icon" href="ogyreccommunity_avatar.ico">
   </head>
 
+  <center><h1>Ogyrec Community</h1></center>
+  
   <body>
     
   </body>
