--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="ogyreccommunity_avatar.ico">
   </head>
 
-  <font face=><center><h1>Ogyrec Community</h1></center></font>
+  <font face="Gogh Extra Bold 800"><center><h1>Ogyrec Community</h1></center></font>
   
   <body>
     
